--- a/css/ladda.css
+++ b/css/ladda.css
@@ -1,46 +1,10 @@
-
-body {
-	background: #f5f5f5;
-	font-family: monospace;
-	font-size: 14px;
-	color: #333333;
-}
-
-.examples {
-	max-width: 670px;
-	margin: 2em auto;
-	padding: 4em;
-	background: #fff;
-	text-align: center
-}
-	.examples .intro {
-		margin-bottom: 3em;
-		line-height: 1.4em;
-		font-size: 16px;
-		text-align: left;
-	}
-		.examples .intro h1 {
-			margin-top: 0;
-			font-size: 18px;
-		}
-
-	.examples .outro {
-		display: block;
-		text-align: right;
-		margin-top: 3em;
-	}
-	.examples section {
-		display: inline-block;
-		width: 24%;
-		min-width: 160px;
-		margin-bottom: 2em;
-		text-align: center;
-		vertical-align: top;
-	}
-	.examples section h3 {
-		color: #bbb;
-		font-weight: normal;
-	}
+/*!
+ * Ladda
+ * http://lab.hakim.se/ladda
+ * MIT licensed
+ *
+ * Copyright (C) 2013 Hakim El Hattab, http://hakim.se
+ */
 
 
 /*************************************
