--- a/css/ladda.scss
+++ b/css/ladda.scss
@@ -8,6 +8,51 @@
 
 
 /*************************************
+ * CONFIG
+ */
+
+$green: #2aca76;
+$blue: #53b5e6;
+$red: #ea8557;
+$purple: #9973C2;
+
+
+/*************************************
+ * MIXINS
+ */
+
+@mixin prefix ( $property, $value ) {
+	-webkit-#{$property}: $value;
+	   -moz-#{$property}: $value;
+	    -ms-#{$property}: $value;
+	     -o-#{$property}: $value;
+	        #{$property}: $value;
+}
+
+@mixin transition( $value ) {
+	@include prefix( transition, $value );
+}
+
+@mixin transform( $value ) {
+	@include prefix( transform, $value );
+}
+
+@mixin transform-origin( $value ) {
+	@include prefix( transform-origin, $value );
+}
+
+@mixin buttonColor( $name, $color ) {
+	&.#{$name} {
+		background: $color;
+
+		&:hover {
+			background-color: lighten( $color, 5% );
+		}
+	}
+}
+
+
+/*************************************
  * BUTTON BASE
  */
 
@@ -20,77 +65,33 @@
 	cursor: pointer;
 	overflow: hidden;
 
+	color: #fff;
+	border-radius: 2px;
+	border: 1px solid transparent;
+
 	-webkit-appearance: none;
 	-webkit-font-smoothing: antialiased;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-	.ladda-button[data-loading] {
+
+	@include buttonColor( green, $green );
+	@include buttonColor( blue, $blue );
+	@include buttonColor( red, $red );
+	@include buttonColor( purple, $purple );
+
+	&:hover {
+		border-color: rgba( 0, 0, 0, 0.07 );
+	}
+
+	&[data-loading] {
 		cursor: default;
-	}
-
-/* Green button */
-.ladda-button.green {
-	background: #2aca76;
-	color: #fff;
-	border-radius: 2px;
-	border: 1px solid transparent;
-}
-	.ladda-button.green:hover {
-		border-color: rgba( 0, 0, 0, 0.07 );
-		background-color: #2fe688;
-	}
-	.ladda-button.green[data-loading] {
 		border-color: rgba( 0, 0, 0, 0.07 );
 		background-color: #999;
-	}
 
-/* Blue button */
-.ladda-button.blue {
-	background: #53b5e6;
-	color: #fff;
-	border-radius: 2px;
-	border: 1px solid transparent;
+		&:hover {
+			background-color: #999;
+		}
+	}
 }
-	.ladda-button.blue:hover {
-		border-color: rgba( 0, 0, 0, 0.07 );
-		background-color: #58c2f8;
-	}
-	.ladda-button.blue[data-loading] {
-		border-color: rgba( 0, 0, 0, 0.07 );
-		background-color: #999;
-	}
-
-/* Red button */
-.ladda-button.red {
-	background: #ea8557;
-	color: #fff;
-	border-radius: 2px;
-	border: 1px solid transparent;
-}
-	.ladda-button.red:hover {
-		border-color: rgba( 0, 0, 0, 0.07 );
-		background-color: #ffa96c;
-	}
-	.ladda-button.red[data-loading] {
-		border-color: rgba( 0, 0, 0, 0.07 );
-		background-color: #999;
-	}
-
-/* Purple button */
-.ladda-button.purple {
-	background: #9973C2;
-	color: #fff;
-	border-radius: 2px;
-	border: 1px solid transparent;
-}
-	.ladda-button.purple:hover {
-		border-color: rgba( 0, 0, 0, 0.07 );
-		background-color: #b084df;
-	}
-	.ladda-button.purple[data-loading] {
-		border-color: rgba( 0, 0, 0, 0.07 );
-		background-color: #999;
-	}
 
 
 /* Spinner animation */
@@ -123,10 +124,7 @@
 	visibility: hidden;
 	opacity: 0;
 
-	-webkit-transition: 0.1s linear all;
-	   -moz-transition: 0.1s linear all;
-	    -ms-transition: 0.1s linear all;
-	        transition: 0.1s linear all;
+	@include transition( 0.1s linear all );
 }
 	.ladda-button[data-loading] .ladda-progress {
 		opacity: 1;
@@ -141,10 +139,7 @@
 .ladda-button,
 .ladda-button .ladda-spinner,
 .ladda-button .ladda-label {
-	-webkit-transition: 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275) all;
-	   -moz-transition: 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275) all;
-	    -ms-transition: 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275) all;
-	        transition: 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275) all;
+	@include transition( 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275) all );
 }
 
 .ladda-button.zoom-in,
@@ -153,10 +148,7 @@
 .ladda-button.zoom-out,
 .ladda-button.zoom-out .ladda-spinner,
 .ladda-button.zoom-out .ladda-label {
-	-webkit-transition: 0.3s ease all;
-	   -moz-transition: 0.3s ease all;
-	    -ms-transition: 0.3s ease all;
-	        transition: 0.3s ease all;
+	@include transition( 0.3s ease all );
 }
 
 
@@ -170,10 +162,11 @@
 
 .ladda-button.expand-right[data-loading] {
 	padding-right: 56px;
-}
-	.ladda-button.expand-right[data-loading] .ladda-spinner {
+
+	.ladda-spinner {
 		opacity: 1;
 	}
+}
 
 
 /*************************************
@@ -186,10 +179,11 @@
 
 .ladda-button.expand-left[data-loading] {
 	padding-left: 56px;
-}
-	.ladda-button.expand-left[data-loading] .ladda-spinner {
+
+	.ladda-spinner {
 		opacity: 1;
 	}
+}
 
 
 /*************************************
@@ -198,21 +192,23 @@
 
 .ladda-button.expand-up {
 	overflow: hidden;
-}
-	.ladda-button.expand-up .ladda-spinner {
+
+	.ladda-spinner {
 		top: -32px;
 		left: 50%;
 		margin-left: -16px;
 	}
+}
 
 .ladda-button.expand-up[data-loading] {
 	padding-top: 3em;
-}
-	.ladda-button.expand-up[data-loading] .ladda-spinner {
+
+	.ladda-spinner {
 		opacity: 1;
 		top: 0.8em;
 		margin-top: 0;
 	}
+}
 
 
 /*************************************
@@ -221,19 +217,21 @@
 
 .ladda-button.expand-down {
 	overflow: hidden;
-}
-	.ladda-button.expand-down .ladda-spinner {
+
+	.ladda-spinner {
 		top: 3.3em;
 		left: 50%;
 		margin-left: -16px;
 	}
+}
 
 .ladda-button.expand-down[data-loading] {
 	padding-bottom: 3em;
-}
-	.ladda-button.expand-down[data-loading] .ladda-spinner {
+
+	.ladda-spinner {
 		opacity: 1;
 	}
+}
 
 
 /*************************************
@@ -241,22 +239,25 @@
  */
 .ladda-button.slide-left {
 	overflow: hidden;
-}
-	.ladda-button.slide-left .ladda-label {
+
+	.ladda-label {
 		position: relative;
 	}
-	.ladda-button.slide-left .ladda-spinner {
+	.ladda-spinner {
 		left: 100%;
 		margin-left: -16px;
 	}
-
-.ladda-button.slide-left[data-loading] .ladda-label {
-	opacity: 0;
-	left: -100%;
 }
-.ladda-button.slide-left[data-loading] .ladda-spinner {
-	opacity: 1;
-	left: 50%;
+
+.ladda-button.slide-left[data-loading] {
+	.ladda-label {
+		opacity: 0;
+		left: -100%;
+	}
+	.ladda-spinner {
+		opacity: 1;
+		left: 50%;
+	}
 }
 
 
@@ -265,22 +266,25 @@
  */
 .ladda-button.slide-right {
 	overflow: hidden;
-}
-	.ladda-button.slide-right .ladda-label {
+
+	.ladda-label {
 		position: relative;
 	}
-	.ladda-button.slide-right .ladda-spinner {
+	.ladda-spinner {
 		right: 100%;
 		margin-left: -16px;
 	}
-
-.ladda-button.slide-right[data-loading] .ladda-label {
-	opacity: 0;
-	left: 100%;
 }
-.ladda-button.slide-right[data-loading] .ladda-spinner {
-	opacity: 1;
-	left: 50%;
+
+.ladda-button.slide-right[data-loading] {
+	.ladda-label {
+		opacity: 0;
+		left: 100%;
+	}
+	.ladda-spinner {
+		opacity: 1;
+		left: 50%;
+	}
 }
 
 
@@ -289,23 +293,26 @@
  */
 .ladda-button.slide-up {
 	overflow: hidden;
-}
-	.ladda-button.slide-up .ladda-label {
+
+	.ladda-label {
 		position: relative;
 	}
-	.ladda-button.slide-up .ladda-spinner {
+	.ladda-spinner {
 		left: 50%;
 		margin-left: -16px;
 		margin-top: 1em;
 	}
-
-.ladda-button.slide-up[data-loading] .ladda-label {
-	opacity: 0;
-	top: -1em;
 }
-.ladda-button.slide-up[data-loading] .ladda-spinner {
-	opacity: 1;
-	margin-top: -16px;
+
+.ladda-button.slide-up[data-loading] {
+	.ladda-label {
+		opacity: 0;
+		top: -1em;
+	}
+	.ladda-spinner {
+		opacity: 1;
+		margin-top: -16px;
+	}
 }
 
 
@@ -314,23 +321,26 @@
  */
 .ladda-button.slide-down {
 	overflow: hidden;
-}
-	.ladda-button.slide-down .ladda-label {
+
+	.ladda-label {
 		position: relative;
 	}
-	.ladda-button.slide-down .ladda-spinner {
+	.ladda-spinner {
 		left: 50%;
 		margin-left: -16px;
 		margin-top: -2em;
 	}
-
-.ladda-button.slide-down[data-loading] .ladda-label {
-	opacity: 0;
-	top: 1em;
 }
-.ladda-button.slide-down[data-loading] .ladda-spinner {
-	opacity: 1;
-	margin-top: -16px;
+
+.ladda-button.slide-down[data-loading] {
+	.ladda-label {
+		opacity: 0;
+		top: 1em;
+	}
+	.ladda-spinner {
+		opacity: 1;
+		margin-top: -16px;
+	}
 }
 
 
@@ -345,10 +355,7 @@
 		left: 50%;
 		margin-left: -16px;
 
-		-webkit-transform: scale( 2.5 );
-		   -moz-transform: scale( 2.5 );
-		    -ms-transform: scale( 2.5 );
-		        transform: scale( 2.5 );
+		@include transform( scale( 2.5 ) );
 	}
 	.ladda-button.zoom-out .ladda-label {
 		position: relative;
@@ -358,18 +365,12 @@
 .ladda-button.zoom-out[data-loading] .ladda-label {
 	opacity: 0;
 
-	-webkit-transform: scale( 0.5 );
-	   -moz-transform: scale( 0.5 );
-	    -ms-transform: scale( 0.5 );
-	        transform: scale( 0.5 );
+	@include transform( scale( 0.5 ) );
 }
 .ladda-button.zoom-out[data-loading] .ladda-spinner {
 	opacity: 1;
 
-	-webkit-transform: none;
-	   -moz-transform: none;
-	    -ms-transform: none;
-	        transform: none;
+	@include transform( none );
 }
 
 
@@ -384,10 +385,7 @@
 		left: 50%;
 		margin-left: -16px;
 
-		-webkit-transform: scale( 0.2 );
-		   -moz-transform: scale( 0.2 );
-		    -ms-transform: scale( 0.2 );
-		        transform: scale( 0.2 );
+		@include transform( scale( 0.2 ) );
 	}
 	.ladda-button.zoom-in .ladda-label {
 		position: relative;
@@ -397,18 +395,12 @@
 .ladda-button.zoom-in[data-loading] .ladda-label {
 	opacity: 0;
 
-	-webkit-transform: scale( 2.2 );
-	   -moz-transform: scale( 2.2 );
-	    -ms-transform: scale( 2.2 );
-	        transform: scale( 2.2 );
+	@include transform( scale( 2.2 ) );
 }
 .ladda-button.zoom-in[data-loading] .ladda-spinner {
 	opacity: 1;
 
-	-webkit-transform: none;
-	   -moz-transform: none;
-	    -ms-transform: none;
-	        transform: none;
+	@include transform( none );
 }
 
 
