--- a/css/ladda.scss
+++ b/css/ladda.scss
@@ -15,6 +15,9 @@ $green: #2aca76;
 $blue: #53b5e6;
 $red: #ea8557;
 $purple: #9973C2;
+$mint: #16a085;
+
+$spinnerSize: 32px;
 
 
 /*************************************
@@ -60,8 +63,8 @@ $purple: #9973C2;
 	position: relative;
 	background: none;
 	border: 0;
-	padding: 0.8em 1em;
-	font-size: 1.3em;
+	padding: 14px 18px;
+	font-size: 18px;
 	cursor: pointer;
 	overflow: hidden;
 
@@ -73,10 +76,11 @@ $purple: #9973C2;
 	-webkit-font-smoothing: antialiased;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
-	@include buttonColor( green, $green );
-	@include buttonColor( blue, $blue );
-	@include buttonColor( red, $red );
-	@include buttonColor( purple, $purple );
+	@include buttonColor( 'green', $green );
+	@include buttonColor( 'blue', $blue );
+	@include buttonColor( 'red', $red );
+	@include buttonColor( 'purple', $purple );
+	@include buttonColor( 'mint', $mint );
 
 	&:hover {
 		border-color: rgba( 0, 0, 0, 0.07 );
@@ -93,6 +97,30 @@ $purple: #9973C2;
 			background-color: #999;
 		}
 	}
+
+	&[data-size=xs] {
+		padding: 4px 8px;
+
+		.ladda-label {
+			font-size: 0.7em;
+		}
+	}
+
+	&[data-size=s] {
+		padding: 6px 10px;
+
+		.ladda-label {
+			font-size: 0.9em;
+		}
+	}
+
+	&[data-size=l] .ladda-label {
+		font-size: 1.2em;
+	}
+
+	&[data-size=xl] .ladda-label {
+		font-size: 1.5em;
+	}
 }
 
 
@@ -101,10 +129,10 @@ $purple: #9973C2;
 	position: absolute;
 	z-index: 2;
 	display: inline-block;
-	width: 32px;
-	height: 32px;
+	width: $spinnerSize;
+	height: $spinnerSize;
 	top: 50%;
-	margin-top: -16px;
+	margin-top: -$spinnerSize/2;
 	opacity: 0;
 }
 
@@ -158,15 +186,27 @@ $purple: #9973C2;
  * EXPAND LEFT
  */
 
-.ladda-button.expand-right .ladda-spinner {
-	right: 0.8em;
-}
-
-.ladda-button.expand-right[data-loading] {
-	padding-right: 56px;
-
+.ladda-button.expand-right {
 	.ladda-spinner {
-		opacity: 1;
+		right: 14px;
+	}
+
+	&[data-size="s"] .ladda-spinner,
+	&[data-size="xs"] .ladda-spinner {
+		right: 4px;
+	}
+
+	&[data-loading] {
+		padding-right: 56px;
+
+		.ladda-spinner {
+			opacity: 1;
+		}
+
+		&[data-size="s"],
+		&[data-size="xs"] {
+			padding-right: 40px;
+		}
 	}
 }
 
@@ -175,15 +215,27 @@ $purple: #9973C2;
  * EXPAND RIGHT
  */
 
-.ladda-button.expand-left .ladda-spinner {
-	left: 0.8em;
-}
-
-.ladda-button.expand-left[data-loading] {
-	padding-left: 56px;
-
+.ladda-button.expand-left {
 	.ladda-spinner {
-		opacity: 1;
+		left: 14px;
+	}
+
+	&[data-size="s"] .ladda-spinner,
+	&[data-size="xs"] .ladda-spinner {
+		left: 4px;
+	}
+
+	&[data-loading] {
+		padding-left: 56px;
+
+		.ladda-spinner {
+			opacity: 1;
+		}
+
+		&[data-size="s"],
+		&[data-size="xs"] {
+			padding-left: 40px;
+		}
 	}
 }
 
@@ -196,19 +248,28 @@ $purple: #9973C2;
 	overflow: hidden;
 
 	.ladda-spinner {
-		top: -32px;
+		top: -$spinnerSize;
 		left: 50%;
-		margin-left: -16px;
+		margin-left: -$spinnerSize/2;
 	}
-}
 
-.ladda-button.expand-up[data-loading] {
-	padding-top: 3em;
+	&[data-loading] {
+		padding-top: 54px;
 
-	.ladda-spinner {
-		opacity: 1;
-		top: 0.8em;
-		margin-top: 0;
+		.ladda-spinner {
+			opacity: 1;
+			top: 14px;
+			margin-top: 0;
+		}
+
+		&[data-size="s"],
+		&[data-size="xs"] {
+			padding-top: 32px;
+
+			.ladda-spinner {
+				top: 4px;
+			}
+		}
 	}
 }
 
@@ -217,23 +278,33 @@ $purple: #9973C2;
  * EXPAND DOWN
  */
 
-.ladda-button.expand-down {
-	overflow: hidden;
+ .ladda-button.expand-down {
+ 	overflow: hidden;
 
-	.ladda-spinner {
-		top: 3.3em;
-		left: 50%;
-		margin-left: -16px;
-	}
-}
+ 	.ladda-spinner {
+ 		top: 62px;
+ 		left: 50%;
+ 		margin-left: -$spinnerSize/2;
+ 	}
 
-.ladda-button.expand-down[data-loading] {
-	padding-bottom: 3em;
+ 	&[data-size="s"] .ladda-spinner,
+ 	&[data-size="xs"] .ladda-spinner {
+ 		top: 40px;
+ 	}
 
-	.ladda-spinner {
-		opacity: 1;
-	}
-}
+ 	&[data-loading] {
+ 		padding-bottom: 54px;
+
+ 		.ladda-spinner {
+ 			opacity: 1;
+ 		}
+
+ 		&[data-size="s"],
+ 		&[data-size="xs"] {
+ 			padding-bottom: 32px;
+ 		}
+ 	}
+ }
 
 
 /*************************************
@@ -247,7 +318,7 @@ $purple: #9973C2;
 	}
 	.ladda-spinner {
 		left: 100%;
-		margin-left: -16px;
+		margin-left: -$spinnerSize/2;
 	}
 }
 
@@ -274,7 +345,7 @@ $purple: #9973C2;
 	}
 	.ladda-spinner {
 		right: 100%;
-		margin-left: -16px;
+		margin-left: -$spinnerSize/2;
 	}
 }
 
@@ -301,7 +372,7 @@ $purple: #9973C2;
 	}
 	.ladda-spinner {
 		left: 50%;
-		margin-left: -16px;
+		margin-left: -$spinnerSize/2;
 		margin-top: 1em;
 	}
 }
@@ -313,7 +384,7 @@ $purple: #9973C2;
 	}
 	.ladda-spinner {
 		opacity: 1;
-		margin-top: -16px;
+		margin-top: -$spinnerSize/2;
 	}
 }
 
@@ -329,7 +400,7 @@ $purple: #9973C2;
 	}
 	.ladda-spinner {
 		left: 50%;
-		margin-left: -16px;
+		margin-left: -$spinnerSize/2;
 		margin-top: -2em;
 	}
 }
@@ -341,7 +412,7 @@ $purple: #9973C2;
 	}
 	.ladda-spinner {
 		opacity: 1;
-		margin-top: -16px;
+		margin-top: -$spinnerSize/2;
 	}
 }
 
