Add jQuery version for Old IE compatibility

--- a/css/ladda.scss
+++ b/css/ladda.scss
@@ -87,6 +87,7 @@ $spinnerSize: 32px;
 	height: 100%;
 	left: 0;
 	top: 0;
+	background: #222;
 	background: rgba( 0, 0, 0, 0.2 );
 
 	visibility: hidden;
