--- a/css/ladda-themed.scss
+++ b/css/ladda-themed.scss
@@ -1,5 +1,8 @@
-/** Contains the default Ladda button theme styles */
+/*!
+ * Ladda including the default theme.
+ */
 
+@import "ladda";
 
 /*************************************
  * CONFIG
