--- a/css/ladda.scss
+++ b/css/ladda.scss
@@ -99,7 +99,10 @@ $spinnerSize: 32px;
  * EASING
  */
 
-.ladda-button,
+.ladda-button {
+	@include transition( 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275) padding );
+}
+
 .ladda-button .ladda-spinner,
 .ladda-button .ladda-label {
 	@include transition( 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275) all );
