--- a/css/ladda.scss
+++ b/css/ladda.scss
@@ -99,10 +99,7 @@ $spinnerSize: 32px !default;
  * EASING
  */
 
-.ladda-button {
-	@include transition( 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275) padding );
-}
-
+.ladda-button,
 .ladda-button .ladda-spinner,
 .ladda-button .ladda-label {
 	@include transition( 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275) all );
